Native/Test/KL/CORE-116.out
CORE-116.kl:6:1: error: type 'Foo' already registered with a different definition
