Native/Test/KL/CORE-116.kl
/*
 *  Copyright 2010-2012 Fabric Technologies Inc. All rights reserved.
 */

struct Foo { Integer bar; } ;
struct Foo { Scalar bar; } ;

operator entry()
{
}
